--- a/quote_print/report/cover_image_report.xml
+++ b/quote_print/report/cover_image_report.xml
@@ -2,16 +2,14 @@
 <odoo>
     <data>
         <template id="report_quote_cover">
-            <t t-call="web.basic_layout">
-                <t t-set="o" t-value="docs"/>
+            <t t-call="web.html_container">
+                <t t-set="o" t-value="docs[0]"/>
                 <t t-foreach="docs" t-as="cover">
                     <div class="header"/>
                     <div class="page" style="margin-left:-15px;margin-right:-15px;">
-                        <!-- <img t-att-src="'data:image/png;base64,%s' % to_text(cover.xaa_aa_cover_image)" t-att-style="'height:'+str(cover.xaa_aa_cover_height or 1031)+'px; width:100%;'"/> -->
                         <img t-if="cover.xaa_aa_cover_image"
-                            t-att-src="image_data_uri(cover.xaa_aa_cover_image)"
-                            t-att-style="height:'+str(cover.xaa_aa_cover_height or 1031)+'px;
-                            width:100%;"/>
+                             t-att-src="image_data_uri(cover.xaa_aa_cover_image)"
+                             t-att-style="'height:'+str(cover.xaa_aa_close_height or 1031)+'px; width:100%;'"/>
                     </div>
                     <div class="footer"/>
                 </t>
