--- a/custom_header_footer/report/ec_layout.xml
+++ b/custom_header_footer/report/ec_layout.xml
@@ -16,7 +16,7 @@
         <t t-else="else" t-call="web.external_layout_standard"><t t-out="0"/></t>
         
          <div class="header" style="margin-left:-15px;margin-right:-15px;">
-             <t t-if="o.company_id.xaa_aa_for_all_report">
+             <t t-if="company.xaa_aa_for_all_report">
                  <img t-if="company.logo" t-att-src="image_data_uri(company.logo)" style="height:150px;width:100%" alt="Companies Logo"/>
              </t>
          </div>
@@ -25,7 +25,7 @@
              <t t-out="0"/>
          </div>
          <div class="footer" style="margin-left:-15px;margin-right:-15px;">
-             <t t-if="o.company_id.xaa_aa_for_all_report">
+             <t t-if="company.xaa_aa_for_all_report">
                  <img t-if="company.logo" t-att-src="image_data_uri(company.logo)" style="height:150px;width:100%" alt="Companies Logo"/>
              </t>
          </div>
