[MOD]update snippet design

--- a/quote_print/report/external_header_footer.xml
+++ b/quote_print/report/external_header_footer.xml
@@ -3,7 +3,7 @@
     <data>
         <!-- sale Layout header -->
         <template id="ec_sale_external_layout_header">
-            <div class="header">
+            <div class="header" style="margin-left:35px;">
                <img t-if="doc.company_id.logo"
                 t-att-src="image_data_uri(doc.company_id.logo)"
                 style="max-height:120px;width:100%;"/>
@@ -12,7 +12,7 @@
 
         <!-- sale Layout footer -->
         <template id="ec_sale_external_layout_footer">
-            <div class="footer o_standard_footer">
+            <div class="footer" style="margin-left:35px;">
                   <img t-if="doc.company_id.logo"
                     t-att-src="image_data_uri(doc.company_id.logo)" style="max-height:120px;width:100%;"/>
             </div>
