--- a/quote_print/report/quotation_report_first_page.xml
+++ b/quote_print/report/quotation_report_first_page.xml
@@ -34,7 +34,7 @@
                             </div><br/><br/><br/><br/>
                         </div>
                     </div>
-                    <div style="margin-left:80px;">
+                    <div style="margin-left:80px;font-size:15px;">
                         <div class="col-lg-6" style="display: inline-block;">
                             <strong class="d-block mb-1 ">Customer:</strong>
                             <div class="col-sm-8 col-xs-8">
@@ -66,7 +66,8 @@
                             </div>
                         </div>
                         <div id="your_contact" class="col-lg-7"
-                            style="margin-left:180px;display: inline-block;">
+                            style="margin-left:180px;display: inline-block;
+                                   font-size:15px;">
                             <strong class="d-block mb-1">Your Contact:</strong>
                             <address class="col-sm-8 col-xs-8"
                                      t-field="sale_order.user_id"
@@ -75,7 +76,7 @@
                         </div>
                     </div>
                     <br/><br/><br/>
-                    <div style="margin-left:80px;">
+                    <div style="margin-left:80px;font-size:15px;">
                         <div style="display: inline-block;min-width:380px;">
                             <div t-if="sale_order.partner_shipping_id.id != sale_order.partner_invoice_id.id" class="col-lg-6"
                             >
